------------------------------------------------------------------------

2012-01-28

* totally new table based livectrl implementation
* switchable livectrl client support from library (get strings for parameters)
* livectrl client support also useable over remote connection: only one
  simple rfm12_livectrl(uint8_t cmd, uint16_t value) function,
  where the parameters can be passed from a remote client.
* parameter load / save and client implementation in examples/uart_frontend

------------------------------------------------------------------------

2012-01-26

* additional livectrl functions
* tests for the livectrl functions in uart_frontend example

------------------------------------------------------------------------

2012-01-25

* rfm12_data_delayed removed and replaced by rfm12_data_safe which turns off
  the interrupt while sending livectrl commands.
* uart_frontend example with VT100 uart interface for controlling rfm12..
  this ist still work in progress.

------------------------------------------------------------------------

2012-01-24

* interrupt handler restructured from goto to do{}while(), fixed deadlock bug
  completely: it could still occur if rx or tx interrupt occurred during servicing
  wakeup timer interrupt.

------------------------------------------------------------------------

2012-01-24

* there was an evil bug, where rfm12.h did not include rfm12_core.h to configure #defines
  this yielded structs, that looked different for rfm12 lib and user code....
* Wakeup timer is finally working most of the time .... there still is a glitch somewhere

------------------------------------------------------------------------

2012-01-23

* use of PWRMGT_DEFAULT makro in rfm12_config.h deprecated. wakeup timer and
  low battery detector handle this automatic.
* RFM12_USE_CLOCK_OUTPUT makro added for config file. this turns on the clock output
* RFM12_CLOCK_OUT_FREQUENCY makro to configure clock output