@@ -2,6 +2,12 @@
 
 2012-01-28
 
+* reworked rfm12_init to use programspace table of init values. saves 40 Bytes.
+
+------------------------------------------------------------------------
+
+2012-01-28
+
 * totally new table based livectrl implementation
 * switchable livectrl client support from library (get strings for parameters)
 * livectrl client support also useable over remote connection: only one
